@@ -3,7 +3,7 @@
     <parent>
         <artifactId>broadleaf</artifactId>
         <groupId>org.broadleafcommerce</groupId>
-        <version>3.0.6-GA</version>
+        <version>3.0.7-GA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>integration</artifactId>
@@ -67,6 +67,7 @@
                         <id>default-test</id>
                         <configuration>
                             <skipTests>true</skipTests>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=512m -Dlegacy=true</argLine>
                         </configuration>
                     </execution>
                     <execution>
